hphp/test/quick/parser_massive_concat_exp.php.expectf
%|{0123456789012345...4567890123456789%h{0a}Total length: 50000%h{0a}Pass|%?{==[0-9]+==WARNING: ASan is ignoring requested __asan_handle_no_return%s}Fatal error: Expression recursion limit reached %s/parser_massive_concat_exp.php on line 1}
